fix: github error

--- a/app/globals.css
+++ b/app/globals.css
@@ -139,7 +139,7 @@ cursor: pointer;
   display: flex;
 justify-content: center;
   align-items: center;
-  padding: 6rem;
+  padding: 4rem;
   font-family: 'Proxima Nova';
   /* background: #1E1E1E; */
 }
@@ -202,7 +202,7 @@ background: none;
   margin: 9px 12.43px 0 0;
 }
 .arrow {
-  margin-top: 11.95px;
+  margin-top: 12.95px;
 }
 .break-flex {
   display: flex;
@@ -245,7 +245,7 @@ cursor: pointer;
 .estimate-group {
   border: 1px solid #FFFFFF;
 border-radius: 10px;
-margin-left: 22px;
+margin: 0 21px 22px 22px;
 }
 .estim {
   margin: 24px 0 0 23px;
@@ -286,4 +286,12 @@ line-height: 15px;
 }
 .note{
   margin: 3px 0 0 4.67px;
+}
+.tick {
+      margin: 2px 3px 0 0;
+}
+.estimate-flex1 {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 24px;
 }
