--- a/app/globals.css
+++ b/app/globals.css
@@ -46,7 +46,7 @@ justify-content: center;
 .tab-flex {
 display: flex;
 justify-content: space-between;
-margin-left: 10.5px;
+margin-left: 0;
 }
 .swap-text {
   margin: 26.5px 0 36.5px 0;
@@ -58,12 +58,12 @@ font-size: 14px;
 line-height: 17px;
 } 
 .menu-icon {
-  margin: 24px 27.5px 0 0;
+  margin: 24px 5.5px 0 0;
 }
 .first-token {
   display: flex;
   justify-content: space-between;
-  margin-left: 15px;
+  margin-left: 0px;
 }
 .token{
   font-family: 'Proxima Nova';
@@ -84,7 +84,7 @@ filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.15));
 border-radius: 17px;
 display: flex;
 width: 103px;
-margin: 0 23px 0 0;
+margin: 0 3px 0 0;
 background: none;
 }
 .ETH {
@@ -101,10 +101,11 @@ background: none;
 }
 .break-flex {
   display: flex;
+  justify-content: center;
 }
 .first-line {
   width: 112px;
-  margin: 36px 2px 36px 20px;
+  margin: 36px 2px 36px 0px;
   height: 0;
   color: #FFFFFF;
 border: 1px solid rgba(255, 255, 255, 0.46);
@@ -197,7 +198,7 @@ line-height: 15px;
   margin-bottom: 24px;
 }
 #select-id {
-  margin: 0 23px 0 0;
+  margin: 0 3px 0 0;
 }
 #selectdiv-id {
   background-color: transparent;
