--- a/app/globals.css
+++ b/app/globals.css
@@ -273,9 +273,9 @@ cursor: pointer;
 color: #FFFFFF;
 }
 .launch-btn1 {
-  margin: 42px 130px 0 0;
+  /* margin: 42px 130px 0 0;
   margin-right: 35px;
-  margin-left: 23%;
+  margin-left: 23%; */
   width: 127px;
   height: 51px;
 border: 1px solid #26569E;
@@ -289,6 +289,11 @@ color: #FFFFFF;
 }
 .launch-btn:hover {
   background: #264794
+}
+.launch-link {
+  margin: 42px 130px 0 0;
+  margin-right: 35px;
+  margin-left: 23%;
 }
 .page-flex {
   display: flex;
