--- a/app/globals.css
+++ b/app/globals.css
@@ -501,6 +501,9 @@ font-size: 14px;
 line-height: 17px;
 margin: 30px 0 0 0;
   }
+  .launch-link {
+    margin: 0px 0 0 0;
+  }
   .white-btn {
     width: 114px;
 height: 37px;
