--- a/app/globals.css
+++ b/app/globals.css
@@ -290,6 +290,9 @@ color: #FFFFFF;
 .launch-btn:hover {
   background: #264794
 }
+.launch-btn1:hover {
+  background: #264794
+}
 .launch-link {
   margin: 42px 130px 0 0;
   margin-right: 35px;
@@ -439,6 +442,10 @@ cursor: pointer;
 .soc-icons {
   margin-right: 18.93px;
 }
+.bottom-nav {
+  display: none;
+  
+}
 @media (min-width: 320px) and (max-width: 450px)  {
   .container{
 flex-shrink: 0;
@@ -450,7 +457,7 @@ flex-shrink: 0;
     display: none;
   }
   .logowhite {
-    margin: 16px 0 0 40px;
+    margin: 29px 0 0 71px;
     width: 92px;
 height: 26px;
   }
@@ -460,7 +467,7 @@ height: 26px;
   .mobsvg {
     display: block;
     margin-top: 108px;
-    margin: 89px 0 0 -10px;
+    margin: 57px 0 0 -10px;
   }
   .content-group {
     /* display: none; */
@@ -468,7 +475,7 @@ height: 26px;
     font-weight: 800;
 font-size: 35px;
 line-height: 102.3%;
-margin: 28% 0 0 -12%;
+margin: 20% 0 0 -10%;
   }
   .grpmusic {
     display: none;
@@ -588,5 +595,18 @@ margin: 0px 0 0 3px;
   .hamburger {
     display: block;
     margin: 25px 45px 0 0;
+  }
+  .bottom-nav{
+    display: block;
+  }
+  .bot-navigate {
+    /* background: #1A1A27; */
+    background: #1A1A27;
+  }
+  .nav-action {
+    color: #264794;
+  }
+  .nav-action:hover{
+    color: #E3E3E3;
   }
 }
