--- a/app/globals.css
+++ b/app/globals.css
@@ -534,7 +534,7 @@ height: 26px;
     padding-top: -1em;
   }
   .home-container {
-    padding: 6em;
+    /* padding: 6em; */
     gap: 0em;
     margin-top: -4em;
     padding-top: 4em;
