--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,17 @@
 @import url('https://fonts.cdnfonts.com/css/proxima-nova-2');
+html {
+  max-height: 100%;
+  overflow-y: scroll;
+  border: 1px solid red;
+}    
 body {
-  background: #1E1E1E;
+   min-height: 100%;
 }
 * {
   font-family: 'Proxima Nova';
+  box-sizing: border-box;
+  margin: 0;
+   padding: 0;
 }
 a {
   text-decoration: none;
@@ -528,10 +536,14 @@ height: 26px;
   line-height: 17px;
   margin: 24px 0 0 30px;
 }
+.btns-flex {
+  margin-top: 7%;
+}
   .page-flex {
-    min-height: 38vh;
+    min-height: 69vh;
     column-gap: 0em;
     padding-top: -1em;
+    max-width: 450px;
   }
   .home-container {
     /* padding: 6em; */
@@ -545,7 +557,7 @@ height: 26px;
     width: 303px;
     font-weight: 800;
 font-size: 35px;
-line-height: 102.3%;
+line-height: 152.3%;
   }
  
   .util {
@@ -554,7 +566,7 @@ line-height: 102.3%;
     margin-right: auto;
     margin-top: 10px;
     font-size: 16px;
-line-height: 136.3%;
+    line-height: 180.3%;
 width: 277px;
 text-align: center;
   }
@@ -581,6 +593,8 @@ height: 115.22px;
   }
   .footer {
     background: #212329;
+    overflow: hidden;
+    margin-top: 2%;
   }
   .footer-body {
    /* flex-direction: column;  */
