--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,11 @@
 html {
   max-height: 100%;
   overflow-y: scroll;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }    
 body {
    min-height: 100%;
+   background-color: red;
 }
 * {
   font-family: 'Proxima Nova';
@@ -430,6 +431,7 @@ display: flex;
 justify-content: right;
 }
 .footer {
+ 
   background: #000000;
   margin: -8px;
   padding: 0;
@@ -513,6 +515,9 @@ cursor: pointer;
   }
 }
 @media (min-width: 320px) and (max-width: 450px)  {
+  .wrapper {
+    margin: 0;
+  }
   .container{
 flex-shrink: 0;
   }
@@ -547,6 +552,7 @@ height: 26px;
   }
   .home-container {
     /* padding: 6em; */
+    max-width: 100vw;
     gap: 0em;
     margin-top: -4em;
     padding-top: 4em;
@@ -592,9 +598,13 @@ margin: 30px 0 0 15px;
 height: 115.22px;
   }
   .footer {
+    /* position: fixed; */
+    bottom: 0;
+    min-width: 0;
     background: #212329;
     overflow: hidden;
     margin-top: 2%;
+    margin: 0;
   }
   .footer-body {
    /* flex-direction: column;  */
@@ -682,4 +692,5 @@ margin: 2px 0 0 3px;
   #bot-id {
     background: #1A1A27;
   }
+
 }
