--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@ html {
 }    
 body {
    min-height: 100%;
-   background-color: red;
+   background-color: #1A1A27;
 }
 * {
   font-family: 'Proxima Nova';
@@ -542,7 +542,7 @@ height: 26px;
   margin: 24px 0 0 30px;
 }
 .btns-flex {
-  margin-top: 7%;
+  margin-top: 1%;
 }
   .page-flex {
     min-height: 69vh;
@@ -563,7 +563,7 @@ height: 26px;
     width: 303px;
     font-weight: 800;
 font-size: 35px;
-line-height: 152.3%;
+line-height: 120.3%;
   }
  
   .util {
@@ -572,7 +572,7 @@ line-height: 152.3%;
     margin-right: auto;
     margin-top: 10px;
     font-size: 16px;
-    line-height: 180.3%;
+    line-height: 152.3%;
 width: 277px;
 text-align: center;
   }
@@ -599,8 +599,9 @@ height: 115.22px;
   }
   .footer {
     /* position: fixed; */
+    position: fixed;
+min-width: 100vw;
     bottom: 0;
-    min-width: 0;
     background: #212329;
     overflow: hidden;
     margin-top: 2%;
