--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@ html {
 }    
 body {
    min-height: 100%;
-   background-color: #1A1A27;
+   background-color:rgb(29, 34, 61);
 }
 * {
   font-family: 'Proxima Nova';
@@ -31,20 +31,13 @@ a {
 }
 
 .connect-btn {
-border: 1px solid #E3E3E3;
 color: #E3E3E3;
-border-radius: 16.5px;
-width: 119px;
-height: 39px;
+
+
 margin-top: 51px;
-background: none;
-cursor: pointer;
+
 }
-.connect-btn:hover {
-  border: 1px solid #26489E;
-  background: #26489E;
-  box-shadow: 0px 8px 16px rgba(12, 77, 174, 0.3);
-}
+
 .main {
   display: flex;
 justify-content: center;
