--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,8 @@ html {
 body {
    min-height: 100%;
    background-color:rgb(29, 34, 61);
+   overflow-y: scroll;
+   overflow-x: hidden;
 }
 * {
   font-family: 'Proxima Nova';
