--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,27 @@
+
 @import url('https://fonts.cdnfonts.com/css/proxima-nova-2');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer utilities {
+  @variants responsive {
+
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+      -ms-overflow-style: none;
+      /* IE and Edge */
+      scrollbar-width: none;
+      /* Firefox */
+    }
+  }
+}
+
 html {
   max-height: 100%;
   overflow-y: scroll;
@@ -14,7 +37,7 @@ body {
   font-family: 'Proxima Nova';
   box-sizing: border-box;
   margin: 0;
-   padding: 0;
+  padding: 0;
 }
 a {
   text-decoration: none;
@@ -443,7 +466,7 @@ justify-content: right;
   display: flex;
 
 }
-.hamburger {
+.hamburger { 
   display: none;
 }
 .whitelogo {
