--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,27 @@
+
 @import url('https://fonts.cdnfonts.com/css/proxima-nova-2');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer utilities {
+  @variants responsive {
+
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+      -ms-overflow-style: none;
+      /* IE and Edge */
+      scrollbar-width: none;
+      /* Firefox */
+    }
+  }
+}
+
 html {
   max-height: 100%;
   overflow-y: scroll;
@@ -14,7 +37,7 @@ body {
   font-family: 'Proxima Nova';
   box-sizing: border-box;
   margin: 0;
-   padding: 0;
+  padding: 0;
 }
 a {
   text-decoration: none;
@@ -437,7 +460,7 @@ cursor: pointer;
   display: flex;
 
 }
-.hamburger {
+.hamburger { 
   display: none;
 }
 .whitelogo {
@@ -765,8 +788,8 @@ margin: 2px 0 0 3px;
   }
   #bot-id {
     background: #1A1A27;
-  }
-  .tabs-group {
+}
+ .tabs-group {
     background: rgba(20, 20, 20);
     display: flex;
     justify-content: center;
@@ -832,4 +855,5 @@ margin: 0;
   text-align: center;
   margin-top: 16px;
 }
+
 }
