style: update love button color

--- a/app/globals.css
+++ b/app/globals.css
@@ -544,6 +544,9 @@ margin: 0 0px 5px 6px;
 .shareicon {
   color: white;
 }
+.favorite {
+  color: white;
+}
 .profile-fam {
   font-weight: 400;
 font-size: 18px;
