--- a/app/globals.css
+++ b/app/globals.css
@@ -385,9 +385,12 @@ color: #FFFFFF;
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 85vh;
+  min-height: 150vh;
   column-gap: 1em;
   padding-top: 4em;
+}
+#watch-id {
+  width: 925px; 
 }
 .home-container{
   display: flex;
@@ -419,6 +422,9 @@ text-align: center;
 width: 417px;
 margin: auto;
 color: #E0E0E0;
+}
+#util-id {
+  width: 100%;
 }
 .box {
   margin: 0;
