--- a/app/globals.css
+++ b/app/globals.css
@@ -443,7 +443,7 @@ color: #FFFFFF;
   width: 85%;
 }
 .secure-group {
-  margin-top: 65px;
+  /* margin-top: 65px; */
   display: flex;
 }
 .phone-class {
