--- a/app/globals.css
+++ b/app/globals.css
@@ -273,7 +273,7 @@ line-height: 15px;
     width: 100%;
   }
 .wrapper {
-  background: rgb(26, 26, 39);
+  /* background: rgb(26, 26, 39); */
   margin: -8px;
   padding: 0; 
   max-width: 1280px;
