--- a/app/globals.css
+++ b/app/globals.css
@@ -29,7 +29,7 @@ html {
 }    
 body {
    min-height: 100%;
-   background-color:rgb(29, 34, 61);
+   background-color:#1A1A27;
    overflow-y: scroll;
    overflow-x: hidden;
 }
@@ -82,7 +82,7 @@ justify-content: center;
 .container {
   width: 345px;
 /* height: 30px; */
-background: rgb(29, 34, 61);
+background: #1A1A27;
 border-radius: 10px;
 display: flex;
 justify-content: center;
@@ -266,14 +266,14 @@ line-height: 15px;
  .bigg-wrap {
     display: flex;
     justify-content: center;
-     background: rgb(26, 26, 39);
+     background: #1A1A27;
   }
   #section1 {
     max-width: 1280px;
     width: 100%;
   }
 .wrapper {
-  /* background: rgb(26, 26, 39); */
+  background: #1A1A27;
   margin: -8px;
   padding: 0; 
   max-width: 1280px;
