--- a/app/globals.css
+++ b/app/globals.css
@@ -264,20 +264,20 @@ line-height: 15px;
 
 /* Homepage */
  .bigg-wrap {
-    display: flex;
-    justify-content: center;
+    /* display: flex;
+    justify-content: center; */
      background: #1A1A27;
   }
   #section1 {
-    max-width: 1280px;
-    width: 100%;
+    /* max-width: 1280px;
+    width: 100%; */
   }
 .wrapper {
   background: #1A1A27;
   margin: -8px;
   padding: 0; 
-  max-width: 1280px;
-    width: 100%;
+  /* max-width: 1280px;
+    width: 100%; */
 }
 .nav-contain {
   max-width: 1280px;
